atualizando estrutura do código